# 3-sem-lab-09-crawler

./: .clang-format  CMakeLists.txt
application/: main.cpp
demo/: main.cpp
include/: Crawler.hpp  ResponseParser.hpp  UrlReader.hpp  crawler_lib.hpp  definitions.hpp  header.hpp
sources/: Crawler.cpp  ResponseParser.cpp  UrlReader.cpp
tests/: test.cpp
